Trim the excess whitespace at the bottom of singlegraphs since the positioning fix

--- a/tessera-frontend/src/css/tessera.css
+++ b/tessera-frontend/src/css/tessera.css
@@ -295,6 +295,7 @@ h1.page-title {
     z-index: 10;
     right: .125em;
     bottom: 1.25em;
+    margin-bottom: -1em;
     float: right;
 }
 
